--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -56,7 +56,7 @@ section {
 .carousel__prev,
 .carousel__next {
     box-sizing: content-box;
-    order: 5px solid white;
+    border: 5px solid white;
 }
 
 .js-badger-accordion {
@@ -73,11 +73,21 @@ section {
     &:last-child {
       border-bottom: none;
     }
-    
+
     .js-badger-accordion-panel-inner {
       padding: 0 8px;
     }
   }
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity .4s;
+}
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
 }
 
 @media screen and (max-width: 768px) {
