--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -5,7 +5,8 @@
 @import './spaces.scss';
 
 body {
-    font-family: 'Titillium Web', sans-serif;
+    //font-family: 'Titillium Web', sans-serif;
+    font-family: 'Exo 2', sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 100%;
