--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -64,6 +64,10 @@ section {
   .js-badger-accordion-header {
     .badger-accordion-toggle {
       display: block;
+
+      .badger-toggle-indicator {
+        display: none;
+      }
     }
   }
 
